marble-maze: add extra challenge section

--- a/notebooks/Marble Maze.ipynb
+++ b/notebooks/Marble Maze.ipynb
@@ -9,10 +9,10 @@
     "            <img style=\"height: '100%';\" src=\"assets/marble-maze/banner.png\">\n",
     "            <img style=\"height: '100%'; width: 74px; margin-left: -65px; -webkit-transform: scaleX(-1); transform: scaleX(-1);\" src=\"assets/marble-maze/banner-separator.svg\">\n",
     "        </div>\n",
-    "        <div style=\"margin-left: 10px; flex: 1; display: flex; flex-direction: column;\">\n",
+    "        <div style=\"margin-left: 20px; flex: 1; display: flex; flex-direction: column;\">\n",
     "            <div style=\"line-height: 24px; color: #ffffff; \">\n",
-    "                <br/> <br/> <br/>\n",
-    "            You are going to create a marble maze game that can be played on the LED matrix. You will use the in-built orientation sensors  to control the movement of a simulated marble that moves the same way a real marble would roll around a maze.\n",
+    "                <br/> <br/> <br/> <br />\n",
+    "            You are going to create a marble maze game that can be played on the Raspberry Pi. You will use the built-in orientation sensors to control the movement of a simulated marble that moves the same way a real marble would roll around a maze.\n",
     "            </div>\n",
     "        </div>\n",
     "    \n",
@@ -102,7 +102,7 @@
    "source": [
     "# Color of the marble, now it is white\n",
     "M = (255, 255, 255) \n",
-    "x, y = 1, 1"
+    "x, y = "
    ]
   },
   {
@@ -223,9 +223,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": false
+   },
    "source": [
     "## Do I have this problem?\n",
+    "If not, congratulations! Enjoy the game.\n",
     "\n",
     "### When the marble moves, a whole line of LEDs illuminate, instead of just one LED\n",
     "1. When the marble moves, we set the LED of the new position to `C`.\n",
@@ -237,6 +240,23 @@
     "\n",
     "### My walls are not solid. My marble can walk on it\n",
     "Check `move_marble` and think what we should do when a marble is going to hit the wall."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidePrompt": false
+   },
+   "source": [
+    "## Challenge: improve the maze\n",
+    "\n",
+    "- Change the speed of the marble’s movement to make the game easier or more difficult.\n",
+    "\n",
+    "- Alter the code so that the goal changes position each time the player wins a game.\n",
+    "\n",
+    "- Create several mazes and choose one at random at the beginning of each round.\n",
+    "\n",
+    "- Add in a second marble that starts in another part of the maze."
    ]
   }
  ],
