marble-maze: add completed code

--- a/notebooks/Marble Maze.ipynb
+++ b/notebooks/Marble Maze.ipynb
@@ -73,16 +73,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAZE = [\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "]"
+    "def create_maze():\n",
+    "    MAZE = [\n",
+    "        [W, W, W, W, W, W, W, W],\n",
+    "        [W, C, C, C, C, C, C, W],\n",
+    "        [W, C, C, C, C, C, C, W],\n",
+    "        [W, C, C, C, C, C, C, W],\n",
+    "        [W, C, C, C, C, C, C, W],\n",
+    "        [W, C, C, C, C, C, C, W],\n",
+    "        [W, C, C, C, C, C, G, W],\n",
+    "        [W, W, W, W, W, W, W, W],\n",
+    "    ]\n",
+    "    return MAZE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Color of the marble, now it is white\n",
+    "M = (255, 255, 255) \n",
+    "x, y = 1, 1"
    ]
   },
   {
@@ -92,17 +105,6 @@
     "## Step 3: Add a marble\n",
     "\n",
     "The maze needs a marble. Let’s change one of the LEDs in the maze list to white to represent the marble."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Color of the marble, now it is white\n",
-    "M = (255, 255, 255) \n",
-    "x, y = "
    ]
   },
   {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,8 +143,23 @@
     "    # how are pitch and roll related to the movement of the marble?\n",
     "\n",
     "    # what if the marble is running into a wall, should we do anything?\n",
-    "        \n",
-    "    return new_x, new_y"
+    "    if 10 < pitch < 170 and x != 0:\n",
+    "        new_x -= 1\n",
+    "    elif 350 > pitch > 170 and x != 7 :\n",
+    "        new_x += 1\n",
+    "    if 10 < roll < 170 and y != 7:\n",
+    "        new_y += 1\n",
+    "    elif 350 > roll > 170 and y != 0 :\n",
+    "        new_y -= 1\n",
+    "\n",
+    "    if MAZE[new_y][new_x] != W:\n",
+    "        return new_x, new_y\n",
+    "    elif MAZE[new_y][x] != W:\n",
+    "        return x, new_y\n",
+    "    elif MAZE[y][new_x] != W:\n",
+    "        return new_x, y\n",
+    "    else:\n",
+    "        return x,y"
    ]
   },
   {
@@ -156,13 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def have_i_won(x, y):\n",
     "    # we want to return True when we have won\n",
-    "    pass"
+    "    if MAZE[y][x] == G:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
@@ -176,9 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "hideCode": true
+    "hideCode": false
    },
    "outputs": [],
    "source": [
@@ -199,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,9 +232,18 @@
     "# 2. how to update the LED display, we can do it by: `update_led(MAZE)`\n",
     "\n",
     "game_finished = False\n",
+    "MAZE = create_maze()\n",
     "while not game_finished:\n",
     "    # to move a marble, we need to detect the orientation of the Sense Hat\n",
     "    # and then update the maze and show it on LED    \n",
+    "    pitch, roll = get_pitch_and_roll()\n",
+    "    x,y = move_marble(pitch,roll,x,y)\n",
+    "    if have_i_won(x,y):\n",
+    "        game_finished = True\n",
+    "    MAZE[y][x] = M\n",
+    "    update_led(MAZE)\n",
+    "    sleep(0.01)\n",
+    "    MAZE[y][x] = C\n",
     "    pass\n",
     "\n",
     "sense.show_message('Yay, you Win')"
@@ -263,9 +291,9 @@
  "metadata": {
   "celltoolbar": "Hide code",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "git-env",
    "language": "python",
-   "name": "python3"
+   "name": "git-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
