marble-maze: refactor code

--- a/notebooks/Marble Maze.ipynb
+++ b/notebooks/Marble Maze.ipynb
@@ -73,16 +73,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAZE = [\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "    [],\n",
-    "]"
+    "def create_maze():\n",
+    "    MAZE = [\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "        [],\n",
+    "    ]\n",
+    "    return MAZE"
    ]
   },
   {
@@ -213,6 +215,7 @@
     "# 2. how to update the LED display, we can do it by: `update_led(MAZE)`\n",
     "\n",
     "game_finished = False\n",
+    "MAZE = create_maze()\n",
     "while not game_finished:\n",
     "    # to move a marble, we need to detect the orientation of the Sense Hat\n",
     "    # and then update the maze and show it on LED    \n",
